changed language swedish -> english

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div id="todo-container">
-    <p id="todo-title">Att - Göra</p>
+    <p id="todo-title">Your To-DO</p>
     <hr>
-    <button id="new-todo" class="new-todo">Lägg till</button>
+    <button id="new-todo" class="new-todo">Add</button>
     <div id="todo-list">
 
     </div>
