--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="alternate" hreflang="sv" href="/?lang=sv" />
+  <script src="https://cdn.jsdelivr.net/npm/confetti-js@0.5.0/dist/index.min.js"></script>
   <link rel="stylesheet" href="/src/styles.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tauri App</title>
