added import and export

--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!doctype html>
-<html lang="en" xml:lang="sv">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <link rel="alternate" hreflang="sv" href="/?lang=sv" />
-  <script src="https://cdn.jsdelivr.net/npm/confetti-js@0.5.0/dist/index.min.js"></script>
   <link rel="stylesheet" href="/src/styles.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tauri App</title>
@@ -14,6 +12,8 @@
     <p id="todo-title">Your To-DO</p>
     <hr>
     <button id="new-todo" class="new-todo">Add</button>
+    <button class="export-btn">Export</button>
+    <button class="import-btn">Import</button>
     <div id="todo-list">
 
     </div>
