--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <div id="todo-container">
     <p id="todo-title">Your To-DO</p>
     <hr>
-    <button id="new-todo" class="new-todo">Add</button>
-    <button class="export-btn">Export</button>
-    <button class="import-btn">Import</button>
+    <div id="new-todo" class="new-todo">Add</div>
+    <div class="export-btn">Export</div>
+    <div class="import-btn">Import</div>
     <div id="todo-list">
 
     </div>
